update all mistake

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
+    <!------- header ------->
     <header class="bg-img">
-        <nav class="d-flex align-item nav-bar bg-dark-black">
+        <nav class="d-flex align-items-center nav-bar bg-dark-black">
             <div class="container">
-                <div class="d-flex align-item justify-content-space">
+                <div class="d-flex align-items-center justify-content-between">
                     <img class="d-lg-none" src="/assets/image/svg/header-logo.svg" alt="header-logo">
                     <label onclick="navbarbtn()" class="z-5 d-lg-none">
                         <span class="menu-lines " id="rotats"></span>
@@ -31,7 +32,7 @@
                         </a>
                     </li>
                     <li>
-                        <ul class="d-flex list-unstyled gap-39 pt-31 align-item">
+                        <ul class="d-flex list-unstyled gap-39 pt-31 align-items-center">
                             <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
                                     href="#">HOME</a>
                             </li>
@@ -64,19 +65,28 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row col-reverse">
+            <div class="row position-relative">
                 <div class=" col-12 col-lg-6">
                     <img class="header-img-1" src="/assets/image/png/header-img-1.png" alt="header-img-1">
                 </div>
                 <div class=" col-12 col-lg-6 mt-133">
-                    <p class="font-family-primary fw-600 text-md lh-27 color-white pt-133">Welcome to Nigalya</p>
-                    <h1 class="font-family-primary fw-900 text-xl lh-109 color-white ">Land of eternal NFT challengers
-                    </h1>
-                    <p class="font-family-primary color-white text-sm fw-600 lh-22 pt-12">The first-choose-to earn on
-                        the
-                        blockchain </p>
-                    <div class="parent">
-                        <button class="font-family-primary btn-1 color-white fw-600 text-sm lh-22 ">JOIN NOW</button>
+                    <div class="d-flex justify-content-center justify-content-lg-start">
+                        <p class="font-family-primary fw-600 text-md lh-27 color-white pt-133">Welcome to Nigalya</p>
+                    </div>
+                    <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
+                        <h1 class="font-family-primary fw-900 text-xl lh-109 color-white ">Land of eternal NFT
+                            challengers
+                        </h1>
+                    </div>
+                    <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
+                        <p class="font-family-primary color-white text-sm fw-600 lh-22 pt-12">The first-choose-to earn
+                            on
+                            the
+                            blockchain </p>
+                    </div>
+                    <div class="parent d-flex justify-content-center justify-content-lg-start">
+                        <button class="font-family-primary btn-1 color-white fw-600 text-sm lh-22 ">JOIN
+                            NOW</button>
                         <button class="font-family-primary btn-2 color-white fw-600 text-sm lh-22 ">Whitepaper</button>
                     </div>
                 </div>
@@ -84,6 +94,7 @@
             <img class="layer" src="/assets/image/png/layer.png" alt="layer">
         </div>
     </header>
+    <!------- section-2 ------->
     <section class="bg-img-2">
         <div class=" grow">
             <p class="font-family-primary fw-600 text-md lh-27 color-white text-center">Trailor</p>
@@ -95,6 +106,7 @@
             </div>
         </div>
     </section>
+    <!------- display-grid ------->
     <section class="d-flex align-items-center justify-content-center min-vh-100 pt-77 pb-100 bg-black-wash">
         <div class="container overflow-x-hidden max-w-1140">
             <h2 class="font-family-primary fw-900 text-xl lh-109 text-white text-center">A Quick Hightlight</h2>
@@ -105,19 +117,19 @@
                     <img class="w-100" src="./assets/image/svg/grid-img-1.svg" alt="grid-img-1">
                 </div>
                 <div class="grid-item grid-item-2">
-                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-2.svg" alt="grid-img-2">
+                    <img class="w-100 max-w-163" src="./assets/image/svg/grid-img-2.svg" alt="grid-img-2">
                 </div>
                 <div class="grid-item grid-item-3">
-                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-3.svg" alt="grid-img-3">
+                    <img class="w-100 max-w-198" src="./assets/image/svg/grid-img-3.svg" alt="grid-img-3">
                 </div>
                 <div class="grid-item grid-item-4">
-                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-4.svg" alt="grid-img-4">
+                    <img class="w-100 max-w-206" src="./assets/image/svg/grid-img-4.svg" alt="grid-img-4">
                 </div>
                 <div class="grid-item grid-item-5">
-                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-5.svg" alt="grid-img-5">
+                    <img class="w-100 max-w-425" src="./assets/image/svg/grid-img-5.svg" alt="grid-img-5">
                 </div>
                 <div class="grid-item grid-item-6">
-                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-6.svg" alt="grid-img-6">
+                    <img class="w-100 max-w-607" src="./assets/image/svg/grid-img-6.svg" alt="grid-img-6">
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-54">
@@ -126,14 +138,14 @@
                     Hero: headwear, drone companions, wings, weaponized items, and more.</p>
             </div>
             <div class="d-flex justify-content-center">
-                <p class="font-family-primary fw-semibold text-md lh-35 text-white">Be part of the community now by
-                    choosing your avatar hosted on the IPFS.</p>
+                <p class="font-family-primary fw-semibold text-md lh-35 text-center text-white">Be part of the community
+                    now by choosing your avatar hosted on the IPFS.</p>
             </div>
         </div>
     </section>
     <!------- accordion ------->
     <section
-        class="section-3 d-flex align-items-center justify-content-center position-relative bg-img-3 bg-black-wash flex-column">
+        class="section-3 d-flex align-items-center justify-content-center position-rel ative bg-img-3 bg-black-wash  flex-column">
         <div class="container max-w-1140">
             <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
             <div class="row">
@@ -150,7 +162,8 @@
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -169,7 +182,8 @@
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -188,7 +202,8 @@
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -207,7 +222,8 @@
                             </h2>
                             <div id="collapseFour" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -226,7 +242,8 @@
                             </h2>
                             <div id="collapseFive" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -245,7 +262,8 @@
                             </h2>
                             <div id="collapseSix" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -264,7 +282,8 @@
                             </h2>
                             <div id="collapseSeven" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                <div
+                                    class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
                                     odio
                                     urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
@@ -273,16 +292,30 @@
                         </div>
                         <div class="line"></div>
                     </div>
-                    <div class="d-flex align-items-center gap-14 mt-82 mb-45">
-                        <img src="./assets/image/svg/twitter-svg.svg" alt="twitter-svg">
-                        <img src="./assets/image/svg/telegram-svg.svg" alt="telegram-svg">
-                        <img src="./assets/image/svg/instagram-svg.svg" alt="instagram-svg">
-                        <img src="./assets/image/svg/discord-svg.svg" alt="discord-svg">
+                    <div
+                        class="d-flex align-items-center justify-content-center justify-content-lg-start gap-14 mt-82 mb-45">
+                        <div class="circle d-flex align-items-center justify-content-center">
+                            <a href="https://x.com/?lang=en" target="_blank">
+                                <img class="icon" src="/assets/image/png/twitter-img.svg" alt="twitter-svg">
+                            </a>
+                        </div>
+                        <div class="circle d-flex align-items-center justify-content-center">
+                            <a href="http://web.telegram.org/k/" target="_blank"><img class="icon"
+                                    src="/assets/image/png/telegram-img.svg" alt="telegram-svg"></a>
+                        </div>
+                        <div class="circle d-flex align-items-center justify-content-center">
+                            <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><img class="icon"
+                                    src="/assets/image/png/instagram-img.svg" alt="instagram-svg"></a>
+                        </div>
+                        <div class="circle d-flex align-items-center justify-content-center">
+                            <a href="https://discord.com/channels/@me" target="_blank"><img class="icon"
+                                    src="/assets/image/png/discord-img.svg" alt="discord-svg"></a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-5">
-                    <img class="w-100" src="./assets/image/png/faq-img.png" alt="faq-img">
-                </div>
+                <!-- <div class="col-12 col-lg-5">
+                    <img class="w- 100 faq-img" src="./assets/image/png/faq-img.png" alt="faq-img">
+                </div> -->
             </div>
         </div>
     </section>
