change in all section

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                     </li>
                     <li>
                         <ul class="d-flex list-unstyled gap-39 pt-31 align-items-center">
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">HOME</a>
                             </li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">ABOUT</a>
                             </li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">ROADMAP</a></li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">TEAM</a>
                             </li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">FAQ</a>
                             </li>
                         </ul>
@@ -71,7 +71,8 @@
                 </div>
                 <div class=" col-12 col-lg-6 mt-133">
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <p class="font-family-primary fw-600 text-md lh-27 color-white pt-133">Welcome to Nigalya</p>
+                        <p class="font-family-primary fw-semibold text-md lh-27 color-white pt-133">Welcome to Nigalya
+                        </p>
                     </div>
                     <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
                         <h1 class="font-family-primary fw-900 text-xl lh-109 color-white ">Land of eternal NFT
@@ -79,15 +80,15 @@
                         </h1>
                     </div>
                     <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
-                        <p class="font-family-primary color-white text-sm fw-600 lh-22 pt-12">The first-choose-to earn
-                            on
-                            the
-                            blockchain </p>
+                        <p class="font-family-primary color-white text-sm fw-semibold lh-22 pt-12">The first-choose-to
+                            earn
+                            on the blockchain </p>
                     </div>
                     <div class="parent d-flex justify-content-center justify-content-lg-start">
-                        <button class="font-family-primary btn-1 color-white fw-600 text-sm lh-22 ">JOIN
+                        <button class="font-family-primary btn-1 color-white fw-semibold text-sm lh-22 ">JOIN
                             NOW</button>
-                        <button class="font-family-primary btn-2 color-white fw-600 text-sm lh-22 ">Whitepaper</button>
+                        <button
+                            class="font-family-primary btn-2 color-white fw-semibold text-sm lh-22 ">Whitepaper</button>
                     </div>
                 </div>
             </div>
@@ -97,12 +98,12 @@
     <!------- section-2 ------->
     <section class="bg-img-2">
         <div class=" grow">
-            <p class="font-family-primary fw-600 text-md lh-27 color-white text-center">Trailor</p>
+            <p class="font-family-primary fw-semibold text-md lh-27 color-white text-center">Trailor</p>
             <h2 class="font-family-primary fw-900 text-xl lh-109 color-white text-center">Coming soon...</h2>
 
             <div class="bottom-text">
-                <p class="font-family-primary fw-600 text-lg lh-41 color-white mt-199 text-center">10:22:25:42</p>
-                <p class="font-family-primary fw-400 color-white text-sm lh-small text-center ">Time left</p>
+                <p class="font-family-primary fw-semibold text-lg lh-41 color-white mt-199 text-center">10:22:25:42</p>
+                <p class="font-family-primary fw-normal color-white text-sm lh-small text-center ">Time left</p>
             </div>
         </div>
     </section>
@@ -165,8 +166,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -185,8 +186,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -205,8 +206,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -225,8 +226,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -245,8 +246,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio| urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -265,8 +266,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -285,8 +286,8 @@
                                 <div
                                     class="accordion-body font-family-primary fw-normal text-small lh-24 text-white opacity-70">
                                     Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
-                                    odio
-                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                    odio urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam
+                                    arcu.
                                 </div>
                             </div>
                         </div>
@@ -313,9 +314,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-12 col-lg-5">
-                    <img class="w- 100 faq-img" src="./assets/image/png/faq-img.png" alt="faq-img">
-                </div> -->
             </div>
         </div>
     </section>
