add hover on footer icon

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                     </li>
                     <li>
                         <ul class="d-flex list-unstyled gap-39 pt-31 align-items-center">
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary text-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">HOME</a>
                             </li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary text-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">ABOUT</a>
                             </li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary text-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">ROADMAP</a></li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary text-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">TEAM</a>
                             </li>
-                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-normal lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary text-white text-sm fw-normal lh-19 navbar-link"
                                     href="#">FAQ</a>
                             </li>
                         </ul>
@@ -64,31 +64,31 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
-            <div class="row position-relative">
-                <div class=" col-12 col-lg-6">
+        <div class="container max-w-1140">
+            <div class="row positi on-relative">
+                <div class=" col-12 col-lg-6 position-relative">
                     <img class="header-img-1" src="/assets/image/png/header-img-1.png" alt="header-img-1">
                 </div>
                 <div class=" col-12 col-lg-6 mt-133">
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <p class="font-family-primary fw-semibold text-md lh-27 color-white pt-133">Welcome to Nigalya
+                        <p class="font-family-primary fw-semibold text-md lh-27 text-white pt-133">Welcome to Nigalya
                         </p>
                     </div>
                     <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
-                        <h1 class="font-family-primary fw-900 text-xl lh-109 color-white ">Land of eternal NFT
+                        <h1 class="font-family-primary fw-900 text-xl lh-109 text-white ">Land of eternal NFT
                             challengers
                         </h1>
                     </div>
                     <div class="d-flex justify-content-center justify-content-lg-start text-center text-lg-start">
-                        <p class="font-family-primary color-white text-sm fw-semibold lh-22 pt-12">The first-choose-to
+                        <p class="font-family-primary text-white text-sm fw-semibold lh-22 pt-12">The first-choose-to
                             earn
                             on the blockchain </p>
                     </div>
                     <div class="parent d-flex justify-content-center justify-content-lg-start">
-                        <button class="font-family-primary btn-1 color-white fw-semibold text-sm lh-22 ">JOIN
+                        <button class="font-family-primary btn-1 text-white fw-semibold text-sm lh-22 ">JOIN
                             NOW</button>
                         <button
-                            class="font-family-primary btn-2 color-white fw-semibold text-sm lh-22 ">Whitepaper</button>
+                            class="font-family-primary btn-2 text-white fw-semibold text-sm lh-22 ">Whitepaper</button>
                     </div>
                 </div>
             </div>
@@ -97,13 +97,13 @@
     </header>
     <!------- section-2 ------->
     <section class="bg-img-2">
-        <div class=" grow">
-            <p class="font-family-primary fw-semibold text-md lh-27 color-white text-center">Trailor</p>
-            <h2 class="font-family-primary fw-900 text-xl lh-109 color-white text-center">Coming soon...</h2>
+        <div class="grow">
+            <p class="font-family-primary fw-semibold text-md lh-27 text-white text-center">Trailor</p>
+            <h2 class="font-family-primary fw-900 text-xl lh-109 text-white text-center">Coming soon...</h2>
 
             <div class="bottom-text">
-                <p class="font-family-primary fw-semibold text-lg lh-41 color-white mt-199 text-center">10:22:25:42</p>
-                <p class="font-family-primary fw-normal color-white text-sm lh-small text-center ">Time left</p>
+                <p class="font-family-primary fw-semibold text-lg lh-41 text-white mt-199 text-center">10:22:25:42</p>
+                <p class="font-family-primary fw-normal text-white text-sm lh-small text-center ">Time left</p>
             </div>
         </div>
     </section>
@@ -145,10 +145,12 @@
         </div>
     </section>
     <!------- accordion ------->
-    <section
+    <footer
         class="section-3 d-flex align-items-center justify-content-center position-rel ative bg-img-3 bg-black-wash  flex-column">
         <div class="container max-w-1140">
-            <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
+            <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
+                <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
+            </div>
             <div class="row">
                 <div class="col-12 col-lg-7">
                     <div class="accordion mt-77" id="accordionExample">
@@ -295,28 +297,31 @@
                     </div>
                     <div
                         class="d-flex align-items-center justify-content-center justify-content-lg-start gap-14 mt-82 mb-45">
-                        <div class="circle d-flex align-items-center justify-content-center">
-                            <a href="https://x.com/?lang=en" target="_blank">
-                                <img class="icon" src="/assets/image/png/twitter-img.svg" alt="twitter-svg">
-                            </a>
-                        </div>
-                        <div class="circle d-flex align-items-center justify-content-center">
-                            <a href="http://web.telegram.org/k/" target="_blank"><img class="icon"
-                                    src="/assets/image/png/telegram-img.svg" alt="telegram-svg"></a>
-                        </div>
-                        <div class="circle d-flex align-items-center justify-content-center">
-                            <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><img class="icon"
-                                    src="/assets/image/png/instagram-img.svg" alt="instagram-svg"></a>
-                        </div>
-                        <div class="circle d-flex align-items-center justify-content-center">
-                            <a href="https://discord.com/channels/@me" target="_blank"><img class="icon"
-                                    src="/assets/image/png/discord-img.svg" alt="discord-svg"></a>
-                        </div>
+                        <a href="https://x.com/?lang=en" target="_blank">
+                            <div class="circle d-flex align-items-center justify-content-center">
+                                <img src="/assets/image/png/twitter-img.svg" alt="twitter-svg">
+                            </div>
+                        </a>
+                        <a href="http://web.telegram.org/k/" target="_blank">
+                            <div class="circle d-flex align-items-center justify-content-center">
+                                <img src="/assets/image/png/telegram-img.svg" alt="telegram-svg">
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
+                            <div class="circle d-flex align-items-center justify-content-center">
+                                <img src="/assets/image/png/instagram-img.svg" alt="instagram-svg">
+                            </div>
+                        </a>
+                        <a href="https://discord.com/channels/@me" target="_blank">
+                            <div class="circle d-flex align-items-center justify-content-center">
+                                <img src="/assets/image/png/discord-img.svg" alt="discord-svg">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
