solve mistake from navbar

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-    <!------- header ------->
-    <header class="bg-img">
+<body class="bg-black-wash">
+    <!--**** header ****-->
+    <header class="bg-img min-v-100">
         <nav class="d-flex align-items-center nav-bar bg-dark-black">
             <div class="container">
                 <div class="d-flex align-items-center justify-content-between">
@@ -23,7 +23,6 @@
                         <span class="menu-lines " id="rotats"></span>
                         <span class="menu-lines " id="transparent"></span>
                         <span class="menu-lines " id="rotats2"></span>
-
                     </label>
                 </div>
                 <ul id="nav-name" class="list-unstyled nav-link d-flex">
@@ -51,13 +50,14 @@
                     </li>
                     <li>
                         <ul class="list-unstyled d-flex gap-20 pt-26">
-                            <li><a href="https://x.com/?lang=en"><img class="icon"
+                            <li><a href="https://x.com/?lang=en" target="_blank"><img class="icon"
                                         src="/assets/image/svg/twitter-svg.svg" alt="twitter-svg"></a></li>
-                            <li><a href="http://web.telegram.org/k/"><img class="icon"
+                            <li><a href="http://web.telegram.org/k/" target="_blank"><img class="icon"
                                         src="/assets/image/svg/telegram-svg.svg" alt="telegram-svg"></a></li>
-                            <li><a href="https://www.instagram.com/accounts/login/?hl=en"><img class="icon"
-                                        src="/assets/image/svg/instagram-svg.svg" alt="instagram-svg"></a></li>
-                            <li><a href="https://discord.com/channels/@me"><img class="icon"
+                            <li><a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><img
+                                        class="icon" src="/assets/image/svg/instagram-svg.svg" alt="instagram-svg"></a>
+                            </li>
+                            <li><a href="https://discord.com/channels/@me" target="_blank"><img class="icon"
                                         src="/assets/image/svg/discord-svg.svg" alt="discord-svg"></a></li>
                         </ul>
                     </li>
@@ -95,7 +95,7 @@
             <img class="layer" src="/assets/image/png/layer.png" alt="layer">
         </div>
     </header>
-    <!------- section-2 ------->
+    <!--**** section-2 ****-->
     <section class="bg-img-2">
         <div class="grow">
             <p class="font-family-primary fw-semibold text-md lh-27 text-white text-center">Trailor</p>
@@ -107,8 +107,8 @@
             </div>
         </div>
     </section>
-    <!------- display-grid ------->
-    <section class="d-flex align-items-center justify-content-center min-vh-100 pt-77 pb-100 bg-black-wash">
+    <!--**** display-grid ****-->
+    <section class="d-flex align-items-center justify-content-center min-vh-100 pt-77 pb-100">
         <div class="container overflow-x-hidden max-w-1140">
             <h2 class="font-family-primary fw-900 text-xl lh-109 text-white text-center">A Quick Hightlight</h2>
             <p class="font-family-primary fw-semibold text-small lh-18 text-center text-white mt-36">ON YOUR
@@ -144,9 +144,8 @@
             </div>
         </div>
     </section>
-    <!------- accordion ------->
-    <footer
-        class="section-3 d-flex align-items-center justify-content-center position-rel ative bg-img-3 bg-black-wash  flex-column">
+    <!--**** accordion ****-->
+    <footer class="section-3 d-flex align-items-center justify-content-center bg-img-3">
         <div class="container max-w-1140">
             <div class="d-flex align-items-center justify-content-center justify-content-lg-start">
                 <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
